# oluto

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  QWEN.md  README.md  ROADMAP.md  concept.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26501ff4db7c_add_async_jobs_table_for_background_.py  4744b905981d_initial_tables.py  a7de1b16b25f_add_is_active_to_user_model.py  b3c7e2a1f459_nullable_business_id_rename_txn_date.py  c4d8f1a2e567_add_import_source_and_batch_id.py  d5e9f2b3a678_make_updated_at_nullable.py  f816db6adf18_add_province_and_tax_profile_to_business.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py  helpers.py
backend/app/api/v1/: api.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/logic/: tax_canada.py
backend/app/models/: async_job.py  transaction.py  user.py
backend/app/schemas/: async_job.py  auth.py  business.py  transaction.py
backend/app/services/: import_parser.py  ocr_utils.py  transaction_service.py
backend/app/services/ai_engine/: __init__.py  (+1 more)
backend/app/tasks/: __init__.py  import_tasks.py
backend/scripts/: list_fuelix_models.py  test_embeddings_logic.py  test_receipt_ocr.py  test_voice_pipeline.py
backend/tests/: conftest.py  test_ai_categorizer.py  test_import_parser.py
backend/tests/api/: conftest.py  test_businesses.py  test_import_transactions.py  test_suggest_category.py  test_transactions.py
(+262 files in other folders)
